// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EmailButton adds a beforeClick function for the click handler 1`] = `
<ButtonRound
  aria-label="Email"
  buttonClassName="share-button--email"
  className=""
  href="#"
  icon={[Function]}
  label="Email"
  onClick={[Function]}
  role="button"
  title=""
/>
`;

exports[`EmailButton does render if boxShadow is true 1`] = `
<ButtonRound
  aria-label="Email"
  boxShadow={true}
  buttonClassName="share-button--email"
  className=""
  href="#"
  icon={[Function]}
  label="Email"
  onClick={[Function]}
  role="button"
  title=""
/>
`;

exports[`EmailButton does render if utmParams are provided 1`] = `
<ButtonRound
  aria-label="Email"
  buttonClassName="share-button--email"
  className=""
  href="#"
  icon={[Function]}
  label="Email"
  onClick={[Function]}
  role="button"
  title=""
/>
`;

exports[`EmailButton renders a round button 1`] = `
<ButtonRound
  aria-label="Email"
  buttonClassName="share-button--email"
  className=""
  href="#"
  icon={[Function]}
  label="Email"
  onClick={[Function]}
  role="button"
  title=""
/>
`;
